--- a/config/database.yml
+++ b/config/database.yml
@@ -15,18 +15,15 @@ default: &default
   pool: 5
   username: root
   password:
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /tmp/mysql.sock
 
 # development:
 #   <<: *default
 #   database: samuraibattle_development
 
 development:
-    adapter: mysql2
-    encoding: utf8
-    database: c9
-    username: <%=ENV['C9_USER']%>
-    host: <%=ENV['IP']%>
+  <<: *default
+  database: samuraibattle_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
